--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -172,14 +172,14 @@ input, select, textarea {
 	}
 
 	p {
-		margin: 0 0 1.25em 0;
+		margin: 0 0 0.2em 0;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
 		font-weight: 400;
 		line-height: 1.25;
-		margin: 0 0 0.5em 0;
-		color: #555;
+		margin: -0.9em 0 0.3em 0;
+		color: black;
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
